--- a/index.html
+++ b/index.html
@@ -107,35 +107,42 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section contact-section">
-      <div class="wrap contact-grid">
-        <div class="contact-card reveal">
-          <h2>Contact & Location</h2>
-          <p><strong>Address</strong><br>Bedford Centre, Smith Rd, Bedfordview, Johannesburg 2007</p>
-          <p><strong>Hours</strong><br>Mon–Fri 9am–6pm • Sat 9am–5pm • Sun 9am–2pm</p>
+   <!-- CONTACT -->
+<section id="contact" class="section contact-section">
+  <div class="wrap contact-grid">
+    <div class="contact-card reveal">
+      <h2>Contact & Location</h2>
+      <p><strong>Address</strong><br>Bedford Centre, Smith Rd, Bedfordview, Johannesburg 2007</p>
+      <p><strong>Hours</strong><br>Mon–Fri 9am–6pm • Sat 9am–5pm • Sun 9am–2pm</p>
 
-          <div class="contact-lines">
-            <a class="contact-line" href="tel:0116156150"><i class="fa-solid fa-phone"></i><span>011 615 6150</span></a>
+      <div class="contact-lines">
+        <a class="contact-line" href="tel:0116156150">
+          <i class="fa-solid fa-phone"></i><span>011 615 6150</span>
+        </a>
 
-            <!-- WhatsApp separate: opens chat with the number -->
-            <a class="contact-line" href="https://wa.me/27838812841" target="_blank" rel="noopener" aria-label="Open WhatsApp chat">
-              <i class="fab fa-whatsapp whatsapp"></i><span>083 881 2841</span>
-            </a>
+        <a class="contact-line" href="https://wa.me/27838812841" target="_blank" rel="noopener" aria-label="Open WhatsApp chat">
+          <i class="fab fa-whatsapp whatsapp"></i><span>083 881 2841</span>
+        </a>
 
-            <a class="contact-line" href="https://www.instagram.com/angelshairstylists/" target="_blank" rel="noopener" aria-label="Instagram">
-              <i class="fab fa-instagram"></i><span>@angelshairstylists</span>
-            </a>
-          </div>
-        </div>
-
-        <div class="map-card reveal delay-1">
-          <iframe loading="lazy"
-            src="https://www.google.com/maps?q=Bedford+Centre,+Smith+Rd,+Bedfordview,+Johannesburg,+2007&output=embed"
-            title="Angels Hair Stylists location"></iframe>
-        </div>
+        <a class="contact-line" href="https://www.instagram.com/angelshairstylists/" target="_blank" rel="noopener" aria-label="Instagram">
+          <i class="fab fa-instagram"></i><span>@angelshairstylists</span>
+        </a>
       </div>
-    </section>
+    </div>
+
+    <div class="map-card reveal delay-1">
+      <iframe
+        src="https://www.google.com/maps?q=Bedford+Centre,+Smith+Rd,+Bedfordview,+Johannesburg,+2007&output=embed"
+        title="Angels Hair Stylists location"
+        allowfullscreen
+        referrerpolicy="no-referrer-when-downgrade"
+        style="border:0;">
+      </iframe>
+    </div>
+  </div>
+</section>
+
+    
   </main>
 
   <footer class="site-footer">
